<resources>
    <string name="app_name">Clase2</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Login App</string>
    <string name="register_title">Register App</string>
    <string name="mail_placeholder">Email</string>
    <string name="pass_placeholder">Contraseña</string>
    <string name="name_placeholder">Nombre</string>
    <string name="surname_placeholder">Apellidos</string>
    <string name="login_txt">Login</string>
    <string name="register_txt">Register</string>



</resources>